fix appList index bug

--- a/src/appDetail.html
+++ b/src/appDetail.html
@@ -84,7 +84,7 @@
                    </div>
                  </div>
             </div>
-            <div class="Liz-border-vertical opacity0" id="footer"></div>
+            <div class="Liz-border-vertical" id="footer"></div>
         </div>
 
 
