--- a/src/appList.html
+++ b/src/appList.html
@@ -46,7 +46,7 @@
                 <li class="card flex transition">
                     <img class="card-img" src={{artworkUrl60}}/>
                     <div class="flex-1 card-content">
-                        <h4>{{inc @index}}、{{this.name}}</h4>
+                        <h4>{{appIndex @index}}、{{this.name}}</h4>
                         <p>
                             encent Technology (Shenzhen) Company Limited
                         </p>
