--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,6 @@
             </div>
         </div>
 
-        <div class="Liz-border-vertical opacity0" id="footer"></div>
+        <div class="Liz-border-vertical" id="footer"></div>
     </body>
 </html>
