--- a/src/tpl/navbar.html
+++ b/src/tpl/navbar.html
@@ -34,6 +34,16 @@
             <a href="#">服务</a>
         </li>
     </ul>
+    <form id="navbar-input" class="navbar-form navbar-left" role="search" action="./appList.html" action="get">
+        <div class="input-group">
+            <input type="text" name="app" value="" class="form-control search-su" placeholder="应用名称或者APP ID" autocomplete="off">
+            <span class="input-group-btn">
+                <button class="btn btn-custom" type="submit">
+                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                </button>
+            </span>
+        </div>
+    </form>
 
     <form class="navbar-form navbar-right">
         <a class="login-btn" href="./login.html">登录</a>
