add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,7 @@
         <!-- Header -->
         <div id="header" class="header">
             <!-- 菜单栏 -->
-            <nav class="navbar" id="navbar">
-
-            </nav>
+            <nav class="navbar" id="navbar"></nav>
 
             <!-- 巨幕 -->
             <div class="jumbotron">
@@ -26,7 +24,7 @@
                         <div class="input-group">
                             <input type="text" id="search-kw" name="app" value="" class="form-control search-su" placeholder="应用名称，APP ID或者商店链接..." autocomplete="off">
                             <span class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
+                                <button class="btn btn-default" type="submit" data-event-category="apps" data-event-action="search">
                                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                 </button>
                             </span>
