--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,6 @@
         </div>
 
         <div class="Liz-border-vertical" id="footer"></div>
-        <script async src='http//www.google-analytics.com/analytics.js'></script>
+        <script async src='http://www.google-analytics.com/analytics.js'></script>
     </body>
 </html>
