--- a/src/tpl/navbar.html
+++ b/src/tpl/navbar.html
@@ -9,7 +9,7 @@
             <a href="./index.html">首页</a>
         </li>
         <li>
-            <a href="./topList.html">榜单</a>
+            <a href="./topList.html?genre=36&amp;type=topfreeapplications">榜单</a>
         </li>
         <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ASO趋势
