add lazyload img on topList

--- a/src/topList.html
+++ b/src/topList.html
@@ -88,7 +88,7 @@
         <div class="card col-xs-2">
             <div class="thumbnail">
                 <a href="" target="_blank">
-                    <img src="{{artworkUrl60}}" alt="1.Faceu－激萌的特效相机，支持多人 (｡･ω･)ﾉﾞ">
+                    <img data-original="{{artworkUrl60}}" alt="1.Faceu－激萌的特效相机，支持多人 (｡･ω･)ﾉﾞ">
                     <div class="caption">
                         <h5>{{name}}</h5>
                         <h6>{{artistName}}</h6>
