--- a/src/tpl/navbar.html
+++ b/src/tpl/navbar.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="./index.html">
             <img src="../images/logo-nav.png"/>
         </a>
     </div>
