--- a/src/appDetail.html
+++ b/src/appDetail.html
@@ -95,7 +95,7 @@
             <div class="flex-1 app-intro-content">
                 <h4>{{name}}</h4>
                 <p>
-                    <table style="width: 420px">
+                    <table style="width: 600px">
                         <thead>
                             <tr>
                                 <th>开发商</th>
@@ -107,7 +107,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>{{artistname}}</td>
+                                <td class="aritistname">{{artistname}}</td>
                                 <td>{{appid}}</td>
                                 <td>{{date currentversionreleasedate}}</td>
                                 <td>{{version}}</td>
