--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <div>
                     <form class="center-block" style="width: 597px; display: block" role="search" action="./appList.html" action="get">
                         <div class="input-group">
-                            <input type="text" id="search-kw" name="app" value="" class="form-control search-su" placeholder="应用名称，APP ID或者商店链接..." autocomplete="off">
+                            <input type="text" name="app" value="" class="form-control search-su search-input" placeholder="应用名称，APP ID或者商店链接..." autocomplete="off">
                             <span class="input-group-btn">
                                 <button class="btn btn-default" type="submit" data-event-category="apps" data-event-action="search">
                                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
