--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ASO100</title>
+        <title>CQASO</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <!-- Core CSS -->
         <!-- <% for (var css in htmlWebpackPlugin.files.css) { %>
