--- a/src/topList.html
+++ b/src/topList.html
@@ -87,12 +87,12 @@
         {{#each content}}
         <div class="card col-xs-2">
             <div class="thumbnail">
-                <a href="" target="_blank">
+                <a href="./appDetail.html?id={{appid}}" target="_blank">
                     <img data-original="{{artworkUrl60}}" alt="1.Faceu－激萌的特效相机，支持多人 (｡･ω･)ﾉﾞ">
                     <div class="caption">
                         <h5>{{name}}</h5>
                         <h6>{{artistName}}</h6>
-                        <h6>{{genreValue}}
+                        <h6>第
                             <span>{{inc @index}}</span>名</h6>
                     </div>
                 </div>
