--- a/src/appList.html
+++ b/src/appList.html
@@ -33,7 +33,7 @@
         <script id="title-template" type="text/x-handlebars-template">
             <h2>「<span>{{word.word}}</span>」搜索结果</h2>
             <p>(共
-                <span>{{arrayLength rank.apps}}</span>条)</p>
+                <span>{{rank.resultSize}}</span>条)</p>
         </script>
 
         <!-- card template -->
