--- a/src/login2.html
+++ b/src/login2.html
@@ -28,6 +28,9 @@
                             </div>
                             <span style="font-size: 12px; color: #ccc" class="helper">请输入手机号</span>
                         </div>
+                        <div class="form-group">
+                            <img src="http://121.196.228.76/caqtcha.jpg" alt="" />
+                        </div>
                     </form>
                 </div>
             </div>
