--- a/src/login2.html
+++ b/src/login2.html
@@ -29,7 +29,7 @@
                             <span style="font-size: 12px; color: #ccc" class="helper">请输入手机号</span>
                         </div>
                         <div class="form-group">
-                            <img src="http://121.196.228.76/caqtcha.jpg" alt="" />
+                            <img src="http://121.196.228.76/dc/captcha.jpg" alt="" />
                         </div>
                     </form>
                 </div>
