--- a/src/appDetail.html
+++ b/src/appDetail.html
@@ -76,6 +76,13 @@
                                            <img src="./images/ico-top.png" alt="" class="margin-left-30px"/>
                                        </td>
                                    </tr>
+                                   <tr>
+                                       <td colspan="5">
+                                           <div id="chart-1" class="chart">
+
+                                           </div>
+                                       </td>
+                                   </tr>
                                </tbody>
                            </table>
 
