--- a/src/appDetail.html
+++ b/src/appDetail.html
@@ -78,7 +78,23 @@
                                    </tr>
                                    <tr>
                                        <td colspan="5">
-                                           <div id="chart-1" class="chart">
+                                           <!-- <div class="nav-select clearfix">
+                                               <ul class="nav navbar-nav clearfix">
+                                                   <li class="dropdown">
+                                                       <span class="navbar-brand">类别</span>
+                                                       <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">
+                                                           <span class="caret eq-child"></span>
+                                                       </a>
+                                                       <ul class="dropdown-menu" role="menu">
+                                                           <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                                           <li>
+                                                               <a href="./topList.html?genre={{urlParams.genre}}&amp;type={{this.type}}" class="active"></a>
+                                                           </li>
+                                                       </ul>
+                                                   </li>
+                                               </ul>
+                                           </div> -->
+                                           <div id="chart-1" class="cqaso-chart">
 
                                            </div>
                                        </td>
