--- a/src/index.html
+++ b/src/index.html
@@ -16,25 +16,23 @@
         <div id="header" class="header">
             <!-- 菜单栏 -->
             <nav class="navbar" id="navbar"></nav>
-
-            <!-- 巨幕 -->
-            <div class="jumbotron">
-                <div>
-                    <form class="center-block" style="width: 597px; display: block" role="search" action="./appList.html" action="get">
-                        <div class="input-group">
-                            <input type="text" name="app" value="" class="form-control search-su search-input" placeholder="应用名称，APP ID或者商店链接..." autocomplete="off">
-                            <span class="input-group-btn">
-                                <button class="btn btn-default" type="submit" data-event-category="apps" data-event-action="search">
-                                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                </button>
-                            </span>
-                        </div>
-                    </form>
-                </div>
-            </div>
         </div>
 
-        <div class="Liz-border-vertical" id="footer"></div>
+        <!-- 巨幕 -->
+        <div class="header-img-center jumbotron">
+            <div>
+                <form class="center-block" style="width: 597px; display: block" role="search" action="./appList.html" action="get">
+                    <div class="input-group">
+                        <input type="text" name="app" value="" class="form-control search-su search-input" placeholder="应用名称，APP ID或者商店链接..." autocomplete="off">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="submit" data-event-category="apps" data-event-action="search">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
+                </form>
+            </div>
+        </div>
         <!-- <script async src='http://www.google-analytics.com/analytics.js'></script> -->
     </body>
 </html>
