--- a/src/tpl/navbar.html
+++ b/src/tpl/navbar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div class="navbar-header">
         <a class="navbar-brand" href="./index.html">
             <img src="../images/logo-nav.png"/>
