--- a/src/appList.html
+++ b/src/appList.html
@@ -80,7 +80,7 @@
                     <th class="hints" style="width: 100px">搜索热度
                         <span data-toggle="tooltip" title="" class="glyphicon glyphicon-question-sign mobile-hide" data-original-title="搜索指数来源于 App Store 官方数据。该指数代表每个关键词在App Store的搜索热度。一般来说，指数越高，则该词每天被搜索次数也越多。"></span>
                     </th>
-                    <th class="tips mobile-hide">搜索结果数
+                    <th class="tips mobile-hide">搜索联想词
                         <span data-toggle="tooltip" title="" class="glyphicon glyphicon-question-sign mobile-hide" data-original-title="搜索联想词指在 App Store 搜索框中输入该关键词时，下拉出现的自动联想推荐的词汇。"></span>
                     </th>
                 </tr>
