--- a/src/login.html
+++ b/src/login.html
@@ -56,6 +56,9 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="">
+                            <a href="./index.html" class="color-custom pull-right">返回首页</a>
+                        </div>
                     </form>
                 </div>
             </div>
