--- a/src/register.html
+++ b/src/register.html
@@ -59,7 +59,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-sm-12">
+                        <div class="">
                             <a href="./index.html" class="color-custom pull-right">返回首页</a>
                         </div>
                     </form>
