--- a/src/tpl/navbar.html
+++ b/src/tpl/navbar.html
@@ -36,7 +36,7 @@
     </ul>
     <form id="navbar-input" class="navbar-form navbar-left" role="search" action="./appList.html" action="get">
         <div class="input-group">
-            <input type="text" name="app" value="" class="form-control search-su search-input" placeholder="应用名称或者APP ID" autocomplete="off">
+            <input id="cqaso-header-search-input" type="text" name="app" value="" class="form-control search-su search-input" placeholder="应用名称或者APP ID" autocomplete="off">
             <span class="input-group-btn">
                 <button class="btn btn-custom" type="submit">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
